kubernetes/apps/security/kyverno/policies/disallow-host-path-and-hostnetwork.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path-and-hostnetwork
spec:
  validationFailureAction: enforce
  rules:
    - name: disallow-host-path-and-hostnetwork
      match: { resources: { kinds: ["Pod"] } }
      validate:
        message: "Host access features are not allowed."
        anyPattern:
          - spec:
              hostNetwork: false
              containers:
                - securityContext:
                    privileged: false
              volumes:
                - name: "*"
                  hostPath: null
